added produc list

--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
 
   </nav>
 
+  <section class="main-container">
+    <div class="cards-container">
+
+      
+
+      </div>
+  </section>
+
   <!–– aside para carrito ––>
   <aside class="product-detail inactive">
     <div class="title-container">
@@ -159,6 +167,8 @@
     </div>
   </div>
   </aside>
+
+
   
   <script src="./main.js"></script>
 </body>
